# whatsapp

./: .env.example  .env.minimal  CHANGELOG.md  Dockerfile  docker-compose.dev.yml  docker-compose.yml  package-lock.json  package.json
dashboard/: README.md  index.html  package-lock.json  package.json  vite.config.ts
dashboard/src/: App.tsx  index.css
dashboard/src/components/: AuditLogPanel.tsx  AuthHeader.css  AuthHeader.tsx  CitySelect.tsx  ContactDetailModal.tsx  CountryCodePicker.tsx  ErrorBoundary.tsx  Layout.css  Layout.tsx  MessageHealth.tsx  PageHeader.tsx  Skeleton.tsx  StateSelect.tsx  SystemCheck.tsx  Toast.tsx  iPhonePreview.tsx
dashboard/src/hooks/: queries.ts  useTheme.ts  useWebSocket.ts
dashboard/src/i18n/: index.ts
dashboard/src/pages/: ActivityLog.tsx  ApiKeys.tsx  CampaignDetail.tsx  CampaignNew.tsx  Campaigns.tsx  Composer.tsx  Contacts.tsx  Dashboard.tsx  Groups.tsx  Infrastructure.tsx  Login.tsx  Logs.tsx  MessageTester.tsx  Messages.tsx  Plugins.tsx  RoleForm.tsx  Roles.tsx  Sessions.tsx  Settings.tsx  Users.tsx  Webhooks.tsx
dashboard/src/services/: api.ts
dashboard/src/utils/: dashboardMetrics.ts  time.ts
pw-test/: package-lock.json  package.json
scripts/: jeishanulwa.sh
sdk/: README.md
sdk/javascript/: package.json
sdk/javascript/src/: index.ts
sdk/python/: pyproject.toml
sdk/python/jeishanulwa/: __init__.py
src/: app.module.ts  main.ts
src/common/cache/: cache.service.ts
src/common/utils/: column-types.ts
src/config/: configuration.ts
src/database/: data-source.ts  migrate-fresh.ts
traefik/: dynamic.yml
(+144 files in other folders)
